# Smart-Blinds

./: README.md  package-lock.json  sdkconfig  sdkconfig.old
components/wifi/: CMakeLists.txt  connect.c
data/: app.tsx
main/: CMakeLists.txt  app.h  main.c
main/routes/: _routes.h  doSchedule.c  helloWorld.c  lower.c  magnetometer.c  new_lower.c  new_raise.c  pin.c  pushBtn.c  raise.c  servo.c  setSchedule.c  stop.c  toggleLed.c
my-preact-app/: package-lock.json  package.json
site/: package-lock.json  package.json
site/src/: app.tsx  logo.tsx
site/src/components/: spinner.tsx
site/src/views/: Magnetometer.tsx  button-push.tsx  hello-world.tsx  led.tsx  lower.tsx  pin.tsx  raise.tsx  saveSchedule.tsx  scheduler.tsx  servo.tsx  stop.tsx
